--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-jshint": "~0.1.1",
     "matchdep": "~0.1.1",
-    "grunt-traceur": "0.0.1"
+    "grunt-es6-module-transpiler": "~0.1.0",
+    "grunt-contrib-uglify": "~0.2.0"
   },
   "engines": {
     "node": ">=0.8.0"
