Kicked out browserify in favor of custom build
For now, I'll ditch nodeJS support because I personally need primarily need it
in the browser. The dependencies are configurable, though, so it should
theoratically be possible to configure it to use a shim around `request` for the
AJAX part.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hyperagent",
   "version": "0.0.0",
-  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-clean": "~0.4.0",
@@ -10,7 +9,8 @@
     "matchdep": "~0.1.1",
     "grunt-es6-module-transpiler": "~0.1.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-browserify": "~0.2.3"
+    "grunt-contrib-concat": "~0.3.0",
+    "lodash": "~1.2.1"
   },
   "engines": {
     "node": ">=0.8.0"
