--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "grunt-es6-module-transpiler": "~0.1.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
-    "lodash": "~1.2.1"
+    "lodash": "~1.2.1",
+    "grunt-mocha": "~0.3.1",
+    "grunt-contrib-connect": "~0.3.0"
   },
   "engines": {
     "node": ">=0.8.0"
