Removed bundled mocha

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "rsvp": "~1.2.0",
     "q": "~0.9.3",
     "jquery": "~2.0.0",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "mocha": "~1.9.0",
+    "chai": "~1.6.0"
   }
 }
