Added URI.js dependency

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "rsvp": "~1.2.0",
     "q": "~0.9.3",
     "jquery": "~2.0.0",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "URIjs": "~1.10.2"
   },
   "devDependencies": {
     "mocha": "~1.9.0",
