--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "q": "~0.9.3",
     "jquery": "~2.0.0",
     "underscore": "~1.4.4",
-    "URIjs": "~1.10.2"
+    "uri.js": "~1.10.2"
   },
   "devDependencies": {
     "mocha": "~1.9.0",
