--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-concat": "~0.3.0",
     "lodash": "~1.2.1",
     "grunt-mocha": "~0.3.1",
-    "grunt-contrib-connect": "~0.3.0"
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-devtools": "~0.1.0-7"
   },
   "engines": {
     "node": ">=0.8.0"
