--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
     "lodash": "~1.2.1",
-    "grunt-mocha": "~0.3.1",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-devtools": "~0.1.0-7"
+    "grunt-devtools": "~0.1.0-7",
+    "karma-mocha": "0.0.1",
+    "grunt-karma": "~0.4.4"
   },
   "engines": {
     "node": ">=0.8.0"
