--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-devtools": "~0.1.0-7",
     "karma-mocha": "0.0.1",
-    "grunt-karma": "~0.4.4"
+    "grunt-karma": "~0.4.4",
+    "grunt-open": "~0.2.0"
   },
   "engines": {
     "node": ">=0.8.0"
