--- a/sample/bower.json
+++ b/sample/bower.json
@@ -5,7 +5,7 @@
     "bootstrap": "~2.3.1",
     "jquery": "~1.8.0",
     "q": "~0.9.3",
-    "URIjs": "~1.10.2",
+    "uri.js": "~1.10.2",
     "angular": "~1.0.6"
   }
 }
