--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,17 @@
   "devDependencies": {
     "mocha": "~1.9.0",
     "chai": "~1.6.0"
-  }
+  },
+  "ignore": [
+    "**/*.md",
+    ".editorconfig",
+    ".gitattributes"
+    ".gitignore",
+    ".travis.yml",
+    "Gruntfile.js",
+    "karma*.js",
+    "lib/",
+    "sample/",
+    "test/",
+  ]
 }
