Fix bower ignore

--- a/bower.json
+++ b/bower.json
@@ -13,13 +13,13 @@
   "ignore": [
     "**/*.md",
     ".editorconfig",
-    ".gitattributes"
+    ".gitattributes",
     ".gitignore",
     ".travis.yml",
     "Gruntfile.js",
     "karma*.js",
     "lib/",
     "sample/",
-    "test/",
+    "test/"
   ]
 }
