Ignore node files in bower build

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "lib/",
     "sample/",
     "test/",
-    "dist/*.min.js"
+    "dist/*.min.js",
+    "dist/commonjs",
+    "package.json"
   ]
 }
