--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ node_js:
 before_script:
   - 'npm install -g bower grunt-cli'
   - 'bower install'
+
+after_script:
+  - 'node_modules/coveralls/bin/coveralls.js < coverage/PhantomJS\ 1.8\ \(Linux\)/lcov.info'
