--- a/sample/components/q/package.json
+++ b/sample/components/q/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q",
-  "version": "0.9.4",
+  "version": "0.9.3",
   "description": "A library for promises (CommonJS/Promises/A,B,D)",
   "homepage": "https://github.com/kriskowal/q",
   "author": "Kris Kowal <kris@cixar.com> (https://github.com/kriskowal)",
@@ -9,7 +9,7 @@
     "promise",
     "promises",
     "promises-a",
-    "promises-aplus",
+    "promises-a-plus",
     "deferred",
     "future",
     "async",
