--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-devtools": "~0.1.0-7",
     "karma-mocha": "0.0.3",
-    "grunt-karma": "~0.5.0",
+    "grunt-karma": "https://github.com/karma-runner/grunt-karma/tarball/eb956ca331deae1c7f9c4555cbf6558df1734146",
     "grunt-open": "~0.2.0",
-    "coveralls": "~2.0.7"
+    "coveralls": "~2.0.7",
+    "karma-coverage": "0.0.3"
   },
   "engines": {
     "node": ">=0.8.0"
