--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - '0.10'
 before_script:
+  # Don't ask me why, but without reinstalling this package, it will just fail.
   - 'npm install https://github.com/karma-runner/grunt-karma/archive/eb956ca331deae1c7f9c4555cbf6558df1734146.tar.gz'
   - 'npm install -g bower grunt-cli'
   - 'bower install'
