--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-watch": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.0",
     "matchdep": "~0.1.1",
     "grunt-es6-module-transpiler": "~0.1.0",
@@ -13,11 +13,11 @@
     "lodash": "~1.3.0",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-devtools": "~0.1.0-7",
-    "karma-mocha": "0.0.3",
-    "grunt-karma": "https://github.com/karma-runner/grunt-karma/archive/eb956ca331deae1c7f9c4555cbf6558df1734146.tar.gz",
+    "karma-mocha": "~0.1.0",
+    "grunt-karma": "~0.5.0",
     "grunt-open": "~0.2.0",
-    "coveralls": "~2.0.7",
-    "karma-coverage": "0.0.3"
+    "coveralls": "~2.1.0",
+    "karma-coverage": "0.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
