--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hyperagent",
   "version": "0.0.0",
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-watch": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.0",
@@ -10,13 +10,13 @@
     "grunt-es6-module-transpiler": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
-    "lodash": "~1.3.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-devtools": "~0.1.0-7",
+    "lodash": "~2.1.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-devtools": "~0.2.0",
     "karma-mocha": "~0.1.0",
     "grunt-karma": "~0.5.0",
     "grunt-open": "~0.2.0",
-    "coveralls": "~2.1.0",
+    "coveralls": "~2.3.0",
     "karma-coverage": "0.1.0"
   },
   "engines": {
