--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-karma": "~0.5.0",
     "grunt-open": "~0.2.0",
     "coveralls": "~2.3.0",
-    "karma-coverage": "0.1.0"
+    "karma-coverage": "0.1.0",
+    "grunt-conventional-changelog": "~1.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
