--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.0",
-    "grunt-contrib-jshint": "~0.6.0",
-    "matchdep": "~0.1.1",
-    "grunt-es6-module-transpiler": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.6.0",
+    "grunt-contrib-jshint": "~0.9.2",
+    "matchdep": "~0.3.0",
+    "grunt-es6-module-transpiler": "~0.6.0",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
-    "lodash": "~2.1.0",
-    "grunt-contrib-connect": "~0.5.0",
+    "lodash": "~2.4.1",
+    "grunt-contrib-connect": "~0.7.1",
     "grunt-devtools": "~0.2.0",
     "karma-mocha": "~0.1.0",
-    "grunt-karma": "~0.5.0",
+    "grunt-karma": "~0.8.0",
     "grunt-open": "~0.2.0",
-    "coveralls": "~2.3.0",
-    "karma-coverage": "0.1.0",
-    "grunt-conventional-changelog": "~1.0.0"
+    "coveralls": "~2.8.0",
+    "karma-coverage": "~0.2.0",
+    "grunt-conventional-changelog": "~1.1.0",
+    "karma-phantomjs-launcher": "^0.1.2"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "grunt test-ci"
