chore(deps): bump dev dependencies

--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "hyperagent",
   "version": "0.0.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "coveralls": "^2.10.0",
+    "grunt": "^0.4.4",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.0",
-    "grunt-contrib-jshint": "~0.9.2",
-    "matchdep": "~0.3.0",
-    "grunt-es6-module-transpiler": "~0.4.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "lodash": "~2.4.1",
+    "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.0",
+    "grunt-conventional-changelog": "~1.1.0",
     "grunt-devtools": "~0.2.0",
-    "karma-mocha": "~0.1.0",
+    "grunt-es6-module-transpiler": "^0.4.0",
     "grunt-karma": "~0.8.0",
     "grunt-open": "~0.2.0",
-    "coveralls": "~2.8.0",
     "karma-coverage": "~0.2.0",
-    "grunt-conventional-changelog": "~1.1.0",
-    "karma-phantomjs-launcher": "^0.1.2"
+    "karma-mocha": "~0.1.0",
+    "karma-phantomjs-launcher": "^0.1.2",
+    "lodash": "~2.4.1",
+    "matchdep": "~0.3.0"
   },
   "engines": {
     "node": ">=0.10.0"
