chore(deps): update dev dependencies

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "devDependencies": {
     "coveralls": "^2.10.0",
     "grunt": "^0.4.4",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "~0.6.0",
     "grunt-conventional-changelog": "~1.1.0",
     "grunt-devtools": "~0.2.0",
